# Search-in-files

./: .gitignore  CMakeLists.txt  README.md  answers.json  config.json  main.cpp  requests.json
Google_tests/: CMakeLists.txt  InverterIndexTest.cpp  SearchServerTest.cpp
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h  ThreadRuner.h
resources/: file001.txt  file002.txt
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp
